# hosp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  RELEASES.md
.github/workflows/: ci.yml
inc/: hosp.h
src/: hosp.c
utils/: CMakeLists.txt  hosp-enumerate.c  hosp-get.c  hosp-poll.c  hosp-set.c  util.c  util.h
utils/man/: hosp-enumerate.1  hosp-get.1  hosp-poll.1  hosp-set.1
